test/users/wmikanik/domain64-badworkaround.good
domain64-badworkaround.chpl:8: error: type mismatch in assignment of ranges with different boundedType parameters
